--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Perlin Noise</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <title>Noise</title>
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   </head>
   <body>
     <canvas id="noiseCanvas"></canvas>
 
-    <script type="text/javascript" src="perlin.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="./noise.js"></script>
+    <script type="text/javascript" src="./main.js"></script>
   </body>
 </html>
